@@ -1,4 +1,5 @@
 1.1.9 - TBD
+    * Fixed undirectional furnaces being invisible
     * Fixed error causing double wooden slabs to render as single slabs
 
 1.1.8 - 2013-03-27
